Fixing padding issues on mobile in About section.

--- a/src/style.scss
+++ b/src/style.scss
@@ -107,7 +107,7 @@ body {
  * ^About Section
  */
 .about {
-  padding: 40px 0 0 0;
+  padding: 40px 0;
   margin: 0;
   text-align: center;
   color: $white;
